--- a/vogel-krypt/skript.ltx
+++ b/vogel-krypt/skript.ltx
@@ -402,7 +402,7 @@ Kommunikation zwischen Alice und Bob:
 \begin{enumerate}
  \item Vor der Übertragung müssen sich beide über das
   Verfahren einigen.
- \item Viele Schlüssel sind eine notwendige Vorraussetzung (großer Schlüsselraum) für die
+ \item Viele Schlüssel sind eine notwendige Voraussetzung (großer Schlüsselraum) für die
   Sicherheit eines Verfahrens.
  \item Vor der Übertragung müssen sie sich auf ein
   Schlüsselpaar $k=(k_{e},k_{d})$ einigen.
@@ -421,7 +421,7 @@ sichere Verbindung übertragen.
   per E-Mail.
 
  \item Der Zeitpunkt der Schlüsselübergabe ist frei wählbar. Es können also bei
-  einem persönlichen Treffen mehrere Schlüssel für späterere Verbindungen
+  einem persönlichen Treffen mehrere Schlüssel für spätere Verbindungen
   vereinbart werden.
 
  \item Mit demselben Schlüssel lassen sich mehrere Nachrichten verschlüsseln.
@@ -446,7 +446,7 @@ Einzelpunkten.
   \href{http://de.wikipedia.org/wiki/Freimaurer-Alphabet}{\highl{Freimaurercode}}
   (zweite Zeile in \autoref{fig:1}) arbeitet ohne Schlüssel. Jeder Buchstabe des Alphabets wird durch
   ein bestimmtes Geheimzeichen ersetzt. Damit ist der Freimaurercode kein
-  Kryptosystem, da das Kerckhoffs' Pinzip verletzt ist: Die Sicherheit
+  Kryptosystem, da das Kerckhoffs' Prinzip verletzt ist: Die Sicherheit
   des Kryptosystems hängt von der Geheimhaltung des Algorithmus' ab.
   \begin{figure}[ht]
     \centering\ttfamily\large
@@ -487,13 +487,13 @@ Unterscheidungen:
 
  \item \highl[Deduktion!globale]{globale Deduktion} (\textit{engl.} global
   deduction) bedeutet, dass ohne
-  Kenntniss von $k_{d}$ ein zu $D(c, k_{d})$ äquivalentes Verfahren~$\tilde{D}$
+  Kenntnis von $k_{d}$ ein zu $D(c, k_{d})$ äquivalentes Verfahren~$\tilde{D}$
   gefunden wird, so dass man jede Nachricht~$m=D(c, k_{d})$ durch
   $m=\tilde{D}(c)$ rekonstruieren kann.
 
  \item \highl[Deduktion!lokale]{lokale Deduktion} (\textit{engl.} instance or
   local deduction) bezeichnet das Finden
-  eines Klartextes für einen einzelnen Chiffretext.
+  eines Klartexts für einen einzelnen Chiffretext.
  \item \highl{Informationsdeduktion} (\textit{engl.} information deduction) bedeutet,
   dass einige Informationen über den Schlüssel oder den Klartext gewonnen werden
   können.
@@ -537,7 +537,7 @@ Tageszeitung von Morgen erst nächste Woche entschlüsseln) und "`unsicher"'
 
 Derzeit ist das \highl{One-Time-Pad} das einzige bekannte, uneingeschränkt sichere
 Kryptoverfahren. In der Praxis findet es hauptsächlich im militärischen Bereich
-und in hochsicheren Umgebungen Anwendung.
+und in hoch sicheren Umgebungen Anwendung.
 
 Alle weiteren Kryptosysteme sind mit einem
 \highl[Angriff!Ciphertext-Only-]{Ciphertext-Only-Angriff} verwundbar.
@@ -624,7 +624,7 @@ Sicherheit des Kryptosystems ziehen.
   \end{table}
 
  \item Für natürliche Sprachen wie Deutsch ergibt sich in großen Texten eine
-  signifikate Verteilung der Buchstaben (\autoref{tab:buchswsk}). Anhand der
+  signifikante Verteilung der Buchstaben (\autoref{tab:buchswsk}). Anhand der
   bekannten Verteilung der Buchstaben in der Sprache und der
   Häufigkeitsanalyse aus dem 1.\,Schritt, kann man die Klartextbuchstaben für
   einige Geheimtextzeichen bestimmen. So steht z.\,B. in einem deutschen Text das
@@ -749,7 +749,7 @@ bis~Z und weiter von A bis zum $(k-1)$-ten~Buchstaben stehen. Jeder Buchstabe de
 Klartextes wird durch den Buchstaben, der unter ihm in der zweiten Zeile
 steht, ersetzt.
 
-Mathematisch ausgedrück, kodiert man die Buchstaben~A bis~Z mit den Zahlen~0
+Mathematisch ausgedruckt, kodiert man die Buchstaben~A bis~Z mit den Zahlen~0
 bis~25 und ordnet jedem Buchstaben den durch die Abbildung $x\mapsto
 x+k\pmod{26}$ beschriebenen Buchstaben zu.
 
@@ -757,7 +757,7 @@ Der Schlüssel für die Verschlüsselung ist dabei $k\in\{0,1,\dotsc,25\}$, die
 Anzahl der Positionen, um die die Buchstaben verschoben werden.
 
 Das Verfahren hat jedoch den Nachteil, das nur wenige ($n$) Schlüssel
-verfügbar sind und das die Verschlüsselung gebrochen ist, sobal \textit{ein}
+verfügbar sind und das die Verschlüsselung gebrochen ist, sobald \textit{ein}
 Buchstabe übersetzt ist. Dies lässt sich wie in \autoref{sec:ka-bsp} gesehen,
 sehr leicht mit der Häufigkeitsanalyse der Buchstaben bewerkstelligen.
 
@@ -800,7 +800,7 @@ Eine Entschlüsselung des Zeichens~0 ist also nicht möglich.
 Die Nachteile der Tauschchiffren sind:
 \begin{itemize}
  \item Häufigkeitsverteilung der natürlichen Sprache bleibt erhalten und
- \item Verschlüsselung ist gekackt, wenn \textit{zwei} Buchstaben übersetzt
+ \item Verschlüsselung ist geknackt, wenn \textit{zwei} Buchstaben übersetzt
   sind
 \end{itemize}
 
@@ -817,12 +817,12 @@ Dazu führt man ein neues und \textit{größeres} Geheimtextalphabet $Y$
 und eine Abbildung $f\colon X\mapsto \mathfrak{P}(Y)$ ein, wobei verschiedene
 Buchstaben disjunkten Teilmengen entsprechen. Für eine Nachricht
 $m=m_{1}m_{2}\dotso m_{k}$ ist der Geheimtext $c=c_{1}c_{2}\dotso c_{k}$,
-wobei $c_{i}$ zufällig aus $f(m_{i})$ gewäht wird. (Italien um 1400).
+wobei $c_{i}$ zufällig aus $f(m_{i})$ gewählt wird. (Italien um 1400).
 
 \begin{bsp}
   Für das Klartextalphabet $X=\{a,b,c\}$, wobei die Buchstaben mit den
   Wahrscheinlichkeiten 0,5\,\%, 0,35\,\% und 0,15\,\% vorkommen, verwenden wir das
-  Geheimalphabet $Y=\{0,1,\dotsc,7\}$. Dazu definieren wir die Abbildung $f$
+  Geheimtextalphabet $Y=\{0,1,\dotsc,7\}$. Dazu definieren wir die Abbildung $f$
   wie folgt
   \begin{gather*}
     f(x) =
@@ -860,7 +860,7 @@ Geheimtextalphabets~$Y$ etwa gleichwahrscheinlich auftreten!
     $x_{n}$ & & & & & \dots & $y_{\frac{n^{2}}{12}}$
   \end{tabular}
   \caption{Zuordnung von $n$ Zeichen des Klartextalphabet auf $n^{2}$
-    Zeichen des Geheimalphabet}
+    Zeichen des Geheimtextalphabet}
   \label{tab:1}
 \end{table}
 
@@ -894,7 +894,7 @@ Geheimtextalphabets~$Y$ etwa gleichwahrscheinlich auftreten!
 \end{lemma}
 
 Ein \highl[Angriff!Brute-Force-]{Brute-force-Angriff} bleibt bei solch einer
-Verschlüsselung prinzipell wirkungslos, weil jeder Geheimtext in zwei
+Verschlüsselung prinzipiell wirkungslos, weil jeder Geheimtext in zwei
 verschiedene, \textit{sinnvolle} Klartexte übersetzt werden kann!
 
 Jedoch bleibt weiterhin der Nachteil bestehen, dass für alle Buchstaben $x\in
@@ -952,12 +952,12 @@ $\frac{4\,\%}{18}\approx 0,25\,\%$ auf. Für "`ch"' ist die Häufigkeit
 $\frac{2,5\,\%}{1,5}\approx 1,6\,\%$.
 
 Dies ist ein Ansatz zunächst durch eine \highl{Häufigkeitsanalyse} die Verschlüsselung für \textit{c} und
-\textit{h} zu knacken. Vorraussetzung für einen solchen Angriff ist aber
+\textit{h} zu knacken. Voraussetzung für einen solchen Angriff ist aber
 ein wirklich langer Geheimtext!
 
-\section{Polyalphabetische Verschlüssung}
+\section{Polyalphabetische Verschlüsselung}
 
-Polyalphabetische Verschlüssung hat ebenfalls das Ziel, die Häufigkeit
+Polyalphabetische Verschlüsselung hat ebenfalls das Ziel, die Häufigkeit
 der Buchstaben zu verwischen. Ein prominentes Beispiel ist die
 \highl{Vigenère-Chiffre} von dem französischen Diplomat \textsc{Blaise
   Vigenère} (1523--1596), die erst im 19.\,Jahrhundert gebrochen wurde.
@@ -1074,7 +1074,7 @@ nach unten gelesen ein Teiltext.
 Obwohl die Teiltexte keine sinnvollen Texte sind, stellt sich bei "`langen"'
 Teiltexten die gleiche Häufigkeitsverteilung der Buchstaben wie bei einem
 richtigen Text ein. Innerhalb der Spalten findet man also eine
-Buchstabenhäuigkeit wie bei einem natürlichen Text.
+Buchstabenhäufigkeit wie bei einem natürlichen Text.
 
 Die einzelnen Teiltexte sind monoalphabetisch verschlüsselt. Man kann
 also im ersten Schritt die Schlüssellänge bestimmen und im zweiten Schritt die
@@ -1154,7 +1154,7 @@ Sprache~$t_{d}$ mit den Buchstabenhäufigkeiten aus \autoref{tab:buchswsk}
 ergibt sich ein \highl{Koinzidenzindex}~$I_{d} \coloneq I(t_{d}) \approx 0,0762$.
 
 Der Koinzidenzindex für einen hinreichend großen Zufallstext~$t_{z}$ der
-Länge~$l$, bei dem alle Buchstaben gleichhäufig auftreten $l_{1}=l_{2}=\dotsb=
+Länge~$l$, bei dem alle Buchstaben gleich häufig auftreten $l_{1}=l_{2}=\dotsb=
 l_{n}$, ist
 \begin{gather*}
   I(t_{z}) = \frac{l}{l-1} \sum_{i=1}^{n} \Bigl(\frac{1}{n}\Bigr)^{2} - \frac{1}{l-1}
@@ -1175,7 +1175,7 @@ Legt man ein Alphabet mit 26~Buchstaben zugrunde, ergibt sich so ein
 In einem Geheimtext~$c$ der Länge~$l$, der das Ergebnis einer
 polyalphabetischen Verschlüsselung mit Periode~$d$ ist, sind die Buchstaben in
 einem Teiltext ($k, d+k, 2d+k,\dotsc$) entsprechend der Buchstabenhäufigkeit
-der Spache verteilt. Zwischen den Teiltexten (d.\,h. von einer Spalte zu einer
+der Sprache verteilt. Zwischen den Teiltexten (d.\,h. von einer Spalte zu einer
 anderen) sind die Buchstaben jedoch zufällig verteilt. (Eigenschaft der
 polyalphabetischen Verschlüsselung.)
 
@@ -1225,7 +1225,7 @@ Periodenlänge genauer einzuschränken.
 Ausgangspunkt für eine Verteidigung ist der Umstand, dass die oben formulierten
 Tests nur für kleine Periodenlängen ($d\ll l$) funktionieren!
 \begin{itemize}
- \item Eine Abwehrstrategie wäre also die Periodenlänge zu vergößern.
+ \item Eine Abwehrstrategie wäre also die Periodenlänge zu vergrößern.
   Praktisch wurde dies bei der \highl{Enigma} umgesetzt. Im deutschen Patent
   wurde 1920 mit drei Rotoren gearbeitet, die eine Periodenlänge von $26^{3}$
   ergaben. Im späteren Einsatz im Krieg wurde eine Maschine mit fünf Rotoren,
@@ -1282,7 +1282,7 @@ Es gibt zwei verschiedene Ansätze der Verschlüsselung:
   \highl{Gartenzaunchiffre}: Die Zeichen werden zeilenweise eingetragen und
   spaltenweise wieder ausgelesen.
 
-  Als Angriffmöglichkeit ist wieder das Erraten der Blocklänge und
+  Als Angriffsmöglichkeit ist wieder das Erraten der Blocklänge und
   anschließendes Suchen nach Anagrammen in jedem Block eine gute Variante.
 \end{itemize}
 
@@ -1335,7 +1335,7 @@ Es gibt zwei verschiedene Ansätze der Verschlüsselung:
 
 \begin{bsp}
   Der Klartext lautet \texttt{kryptologie\,und\,datensicherheit}. Die
-  Blöckgröße~$k$ soll 6 sein und die Permutation $\pi = (1, 5, 3, 6, 4, 2)$.
+  Blockgröße~$k$ soll 6 sein und die Permutation $\pi = (1, 5, 3, 6, 4, 2)$.
   Wenn man den Text jetzt in ein Gitter einträgt, bleibt die letzte Zelle
   links unten leer. Diese füllt man einfach mit einem vorher vereinbarten
   Zeichen, bei uns \texttt{a}. siehe \autoref{fig:sp-trans}. Wenn man dann den
@@ -1510,7 +1510,7 @@ folgenden Klartextblock:
   \label{fig:cfb}
 \end{figure}
 
-\highl{Cipher Feedback Mode} (\highl{CFB}) ist ähnlich zu CBC. Der voherige
+\highl{Cipher Feedback Mode} (\highl{CFB}) ist ähnlich zu CBC. Der vorherige
 Geheimtextblock wird verschlüsselt und dieses Ergebnis mit dem Klartextblock
 verknüpft, um Anomalien im Klartext auszugleichen. \autoref{fig:cfb}
 \begin{align*}
@@ -1536,7 +1536,7 @@ verknüpft, die Geheimtextblöcke ergeben. \autoref{fig:ofb}
 \end{align*}
 
 Dies bringt zwei Vorteile mit sich: Zum Einen kann eine solche Folge schon
-vorgeneriert werden, wodurch die eigentliche Verschlüsselung, bei Vorliegen
+vorab generiert werden, wodurch die eigentliche Verschlüsselung, bei Vorliegen
 des Klartextes, sehr schnell geht. (Vorteilhaft z.\,B. bei Streaming) Zum
 Anderen kann ein Klartextblock direkt ausgetauscht werden, ohne dass man die
 folgenden Blöcke oder die verschlüsselte Folge neu berechnen muss:
@@ -1867,7 +1867,7 @@ Hieraus folgt dann $A=M^{-1}C$ und weiter $b= c_{0}-m_{0}A$.
 
 Für \highl[Hill-Chiffre]{Hill-Chiffren} (d.\,h. $b=0$) genügen $n$~Paare $(m_{j},c_{j})$, da
 die Matrix~$C$ nicht als $(c_{i}-c_{0})$ definiert werden muss, um den Anteil
-von $b$ zu eleminieren. Damit können auch für die Matrix~$M$ direkt die
+von $b$ zu eliminieren. Damit können auch für die Matrix~$M$ direkt die
 Klartextblöcke verwendet werden.
 
 \begin{bsp}
@@ -1953,7 +1953,7 @@ aufwendiger werden zu lassen.
 Die Idee zur Feistel-Chiffre wurde 1971 bei IBM in
 dem Projekt "`\href{http://de.wikipedia.org/wiki/Lucifer\_(Kryptographie)}{Lucifer}"'
 entwickelt und ist heute Grundlage für viele symmetrische Blockchiffren unter
-anderem dem heute am häufigsten eingesetzen Verschlüsselungsalgorithmus DES
+anderem dem heute am häufigsten eingesetzten Verschlüsselungsalgorithmus DES
 --~dazu später mehr in \autoref{sec:des}. Als Erfinder der Feistel"=Chiffre
 gilt
 \href{http://de.wikipedia.org/wiki/Horst_Feistel}{\textsc{Horst Feistel}}, ein
@@ -2066,7 +2066,7 @@ linear, da sich leicht zeigen lässt, dass $f(ax+by)=af(x)+bf(y)$ mit
 $f(x)= f(x_1, x_2)= x_1\oplus x_2= x_1 + x_2 \mod 2$ für $x_1, x_2 \in
 \mathbb{F}_2$ folgt.
 
-Ist die Funktion~$f$ eine krytographisch sichere Pseudozufallsfunktion, so
+Ist die Funktion~$f$ eine kryptographisch sichere Pseudozufallsfunktion, so
 haben \textsc{Michael Luby} und \textsc{Charles Rackoff} gezeigt\cite{luby}, reichen drei Runden um eine
 Pseudozufallspermutation zu erreichen. Mit vier Runden bekommt man sogar eine
 starke Pseudozufallspermutation.\footnote{Geklaut aus der
@@ -2208,7 +2208,7 @@ wobei die Verschlüsselungsfunktion~$f$ wie folgt aufgebaut ist:
   Transformation~$S$ ein 32-Bit-Wort $R_{3}$ erzeugt. Dazu wird $R_{2}$ in
   8~Worte der Länge~6 zerlegt und diese werden jeweils in einer eigenen $S$-Box
   $S_{i}$ ($1\leq i\leq8$) zu 8~Worten der Länge~4 verarbeitet. Diese
-  aneinandergereiht ergeben das 32-Bit-Wort $R_{3}$.
+  aneinander gereiht ergeben das 32-Bit-Wort $R_{3}$.
  \item Permutation: Die Ausgabe von $f$ wird durch eine Blocktransposition
   ($P$-Box) aus $R_{3}$ erzeugt.
 \end{enumerate}
@@ -2240,7 +2240,7 @@ Gruppeneigenschaft), so könnte man statt der Verkettung $DES_{k_{1}}\circ
 DES_{k_{2}}$ die einfache Verschlüsselung $DES_{k_{3}}$ angreifen, der
 Schlüsselraum hätte sich also nicht vergrößert. Es gilt sogar, dass die Gruppe
 von Verschlüsselungen, die durch beliebige Verkettungen von
-DES-Verschlüsselungen erzeut wird, mehr als $10^{2499}$ Verschlüsselungen
+DES-Verschlüsselungen erzeugt wird, mehr als $10^{2499}$ Verschlüsselungen
 umfasst.\cite[S.\,258]{menezes}\cite{wiener}
 
 \begin{itemize}
@@ -2434,8 +2434,8 @@ und $S_{1}(a)\oplus S_{1}(\tilde{a})\in\Z_{2}^{n}$ \highl{Ausgabedifferenz}
 Für ein festes $a^{*}\ne0\in\Z_{2}^{m}$ gibt es genau $2^{m-1}$
 Mengen\footnote{Man hat $2^{m}$ Möglichkeiten für die Wahl von $a$.
 $\tilde{a}$ ist dann fest $\tilde{a}=a\oplus a^{*}$. Da die Menge ungeordnet
-ist, entfällt die Hälte der Möglichkeiten.} der Form $\{a,\tilde{a}\}$, für
-die $a\oplus \tilde{a}=a^{*}$ ist. Theoretisch sind $2^{n}$ verschiede
+ist, entfällt die Hälfte der Möglichkeiten.} der Form $\{a,\tilde{a}\}$, für
+die $a\oplus \tilde{a}=a^{*}$ ist. Theoretisch sind $2^{n}$ verschiedene
 Ausgabedifferenzen $S(a)\oplus S(\tilde{a})\in\Z_{2}^{n}$ möglich, jedoch sind
 für einige Eingabedifferenzen (insgesamt gibt es $2^{m}-1$) die Ergebnisse
 einiger $S$-Boxen nicht gleichverteilt.
@@ -2471,7 +2471,7 @@ $f_{k_{i}}$ nur $R_{i-1}$ relevant ist. Der Ablauf ist nun wie folgt:
 \begin{enumerate}
  \item Diffusion: $d = D(R_{i-1})$
  \item Schlüsselverknüpfung: $a = d\oplus k_{i}$
- \item Konfusionsschrit: Zerlegung von $a$ in Blöcke~$a^{\ell}$ der Länge~$m$
+ \item Konfusionsschritt: Zerlegung von $a$ in Blöcke~$a^{\ell}$ der Länge~$m$
   und Transformation dieser in der jeweiligen $S$-Box $S_{\ell}$.
  \item (Permutationsschritt:) Dieser muss nicht betrachtet werden, da man
   diesen Schritt ausgehend vom Geheimtext einfach rückgängig machen kann.
@@ -2511,7 +2511,7 @@ Ausgabedifferenz der $\ell$-ten~$S$-Box ist
 \end{gather*}
 
 Sind die Ausgaben des Diffusionsschritts~$d^{\ell}$ und $\tilde{d}^{\ell}$ und
-die Ausgabedifferenz des Konfusionsschrits~$S_{\ell}(a^{\ell})\oplus
+die Ausgabedifferenz des Konfusionsschritts~$S_{\ell}(a^{\ell})\oplus
 S_{\ell}(\tilde{a}^{\ell})$ bekannt, so kann man mit Hilfe dieser Größen über
 die bekannte Verteilung der Eingabe- und Ausgabedifferenzen für die $S$-Box
 $S_{\ell}$ die Menge der möglichen Eingaben $\{a^{\ell},\tilde{a}^{\ell}\}$ in
@@ -2577,7 +2577,7 @@ $L_{2} = L_{3}\oplus f_{k_{3}}(R_{2})$ bestimmen.
 
 Für den Schlüssel der zweiten Runde kann man direkt die Ausgabedifferenz des
 Konfusionsschritts bestimmen, denn $R_{2} = L_{1}\oplus f_{k_{2}}(R_{1}) =
-R_{0}\oplus f_{k_{2}}(R_{1})$. Die Diffusion $D(R_{1}) = D(L_{2})$ lässte sich
+R_{0}\oplus f_{k_{2}}(R_{1})$. Die Diffusion $D(R_{1}) = D(L_{2})$ lässt sich
 wieder berechnen und damit besteht wieder eine Situation wie im Fall mit einer
 Runde. Danach verbleibt nur noch eine Runde.
 
@@ -2746,7 +2746,7 @@ acht Bit.
 
 \begin{enumerate}
  \item Die Größe des Schlüsselraums ist $2^{56}$ (es genügt aber
-  $2^{55}$~Schlüssel zu testen), mit erschöpfender Suche war dies 1977 defacto
+  $2^{55}$~Schlüssel zu testen), mit erschöpfender Suche war dies 1977 de facto
   nicht möglich.
 
   1997: setzt die RSA-Data-Security US-\$~10\,000 für die Dechiffrierung
@@ -2770,7 +2770,7 @@ acht Bit.
 
   2006: Ein Team der Universitäten Kiel und Bochum entwickeln
   COPACOBANA. Mit Kosten von etwa US-\$~10\,000 berechnet die Maschine
-  65~Millarden DES"=Schlüssel pro Sekunde.
+  65~Milliarden DES"=Schlüssel pro Sekunde.
  \item Es gibt bei DES \highl[Schlüssel!schwacher]{schwache Schlüssel}, die für alle Runden den gleichen
   Rundenschlüssel erzeugen. Aber man kann diese auch einfach beim Einsatz
   vermeiden.
@@ -2915,7 +2915,7 @@ RC5 ist sicher gegen differentielle und lineare Kryptoanalyse.\cite{rc5save}
 Um die Kriterien für die Ausschreibung des Advanced Encryption Standards zu
 erfüllen, wurde RC5 etwas verändert und als \highl{RC6} eingereicht. Die
 Blockgröße, Schlüssellänge und Rundenanzahl können aus den selben Bereichen wie
-bei RC5 gewählt werden. RC6 wurde 1998 veröffentlich und gelangte auch in die
+bei RC5 gewählt werden. RC6 wurde 1998 veröffentlicht und gelangte auch in die
 letzte Ausscheidungsrunde für den AES.
 
 % 6.12.
@@ -2926,7 +2926,7 @@ Blowfish (1994), Twofish (1998) von Bruce Schneier
 
 \begin{description}
  \item[Blowfish] variable Schlüssellänge (bis 448~Bit), $S$-Boxen
-  schlüsselabhängig, 16~Runden, Blöcklänge~64. Trotz aufwendiger $S$-Boxen
+  schlüsselabhängig, 16~Runden, Blocklänge~64. Trotz aufwendiger $S$-Boxen
   ein schnell zu implementierender Algorithmus (\texttt{xor} und Addition von
   32-Bitwerten)
 
@@ -2966,7 +2966,7 @@ $\ggT(a,m) = 1$ (\autoref{lem:5}).
 $\Z_{m}^{*}$ bezeichnet die \highl[Einheiten!Menge der]{Menge der Einheiten} in $\Z_{m}$, also
 gilt: $\abs{\Z_{m}^{*}} = \phi(m)$ (\autoref{lem:5}). Wenn $m=p$ eine Primzahl
 ist, dann ist $\Z_{p}^{*} = \{1, 2,\dotsc,p-1\}$ (da $\phi(p)=p-1$) und
-$\Z_{p}$ ein endlicher Körper der Ordung~$p$.
+$\Z_{p}$ ein endlicher Körper der Ordnung~$p$.
 
 \subsection{Polynomringe}
 
@@ -2979,7 +2979,7 @@ $r_{k}\ne0$ ist, wie folgt:
 \end{gather*}
 $R[x]$ bezeichnet die \highl[Polynom!Menge aller]{Menge aller Polynome} in $x$ über $R$.
 
-Die Addition und Multilikation von zwei Polynomen erfolgt wie üblich
+Die Addition und Multiplikation von zwei Polynomen erfolgt wie üblich
 komponentenweise. Damit bildet die Struktur $[R[x], +, \cdot]$ einen
 (abzählbar unendlichen) \highl{Polynomring}.
 
@@ -3091,7 +3091,7 @@ mit Koeffizienten aus $\Z_{2}$, und das Modulpolynom
 \end{bsp}
 
 Da es für die Multiplikation nur 65\,536 verschiedene Kombinationen
-gibt, kann man diese auch vorberechnen und in einer $256\times256$-Tabelle
+gibt, kann man diese auch vorher berechnen und in einer $256\times256$-Tabelle
 abspeichern.
 
 \subsection{Darstellung der Elemente aus \texorpdfstring{$\F_{256}$}{F256}}
@@ -3215,7 +3215,7 @@ $\oplus$\footnote{Wenn man sich die Verknüpfungstabellen für $\oplus$, $-$ und
 $\odot$ und Polynomdivision) verwendet.
 
 Es sei $p(x)\in\F_{256}$ mit $p(x)\ne0$. Da $m(x)$ irreduzibel ist, sind
-$p(x)$ und $m(x)$ teilerfremd zu einander, d.\,h. der größe gemeinsame Teiler
+$p(x)$ und $m(x)$ teilerfremd zu einander, d.\,h. der größte gemeinsame Teiler
 von $p(x)$ und $m(x)$ ist 1. Also liefert der erweiterte euklidische
 Algorithmus nach \autoref{eq:erw-euk-algo} zwei Polynome $u(x)$ und $v(x)$
 mit der Eigenschaft, dass sich 1 als
@@ -3310,7 +3310,7 @@ wieder, dass die Addition $a\oplus b$ komponentenweise mit \texttt{xor} erfolgt
 \end{gather*}
 und die Multiplikation $a\otimes b$ in zwei Schritten abläuft
 \begin{enumerate}
- \item zuerst die Polynommultiplikation $c(x) = a(x)\odot b(x) = c_{6} x^{6} + \dotsb+
+ \item zuerst die Multiplikation mit einem Polynom $c(x) = a(x)\odot b(x) = c_{6} x^{6} + \dotsb+
   c_{1} x^{1} + c_{0}$, wobei folgendes gilt
   \begin{align*}
     c_{6}& = (a_{3}\odot b_{3})\\
@@ -3351,7 +3351,7 @@ und die Multiplikation $a\otimes b$ in zwei Schritten abläuft
        (a_{2}\odot b_{2})\oplus (a_{1}\odot b_{3})
   \end{align*}
 
-  Matrizenschreibweise:
+  Matrixschreibweise:
   \begin{gather*}
     \begin{pmatrix}
       d_{3}\\
@@ -3414,10 +3414,10 @@ mit dem Inversen $c^{-1}(x) = 0B x^{3} + 0D x^{2} + 09 x + 0E$
 Durch die Forderung, dass AES öffentlich sein soll, ist der mathematische
 Hintergrund für AES bekannt, während z.\,B. der Grund für die Wahl der
 $S$-Boxen bei DES unbekannt ist. --~IBM kannte bereits seit den 1970ern die
-differentielle Kryptoanalyse.~-- Damit ist auch für jederman nachprüfbar, ob
+differentielle Kryptoanalyse.~-- Damit ist auch für jedermann nachprüfbar, ob
 AES korrekt arbeitet.
 
-\subsection{Bescheibung des Verfahrens von Rijndael}
+\subsection{Beschreibung des Verfahrens von Rijndael}
 
 Das Verfahren von Rijndael ist eine iterierte Blockchiffre, deren Block- und
 Schlüssellänge unabhängig voneinander 128, 192 oder 256~Bit betragen können.
@@ -3492,7 +3492,7 @@ zweiten Schritts (\highl{SubBytes}) verwendet und mit $S_{i,b}$ bezeichnet
        b^{(3,0)}& \hdotsfor{2} & b^{(3,3)}
      \end{pmatrix}
 \end{gather*}
-Das Ergbnis des zweiten Schritts wird als Eingabe des dritten Schritts
+Das Ergebnis des zweiten Schritts wird als Eingabe des dritten Schritts
 (\highl{ShiftRows}) verwendet und mit $S_{i,c}$ bezeichnet. Das Ergebnis des
 dritten Schritts wird als Eingabe für den vierten Schritt
 (\highl{MixColumns}) verwendet und mit $S_{i,d}$ bezeichnet. Die
@@ -3550,7 +3550,7 @@ Für jedes Byte $b^{(z,s)}\in\F_{256}$ ($z,s\in\{0,\dotsc,3\}$) der Eingabe $S_{
   beschreiben die gleiche Struktur. Man kann also die Elemente des Körpers
   $\F_{256}$ auch als Elemente des Polynomrings $\nicefrac{\F_{2}[x]}{x^{8}+1}$
   auffassen, d.\,h. $\tilde{b}^{(z,s)}\in\nicefrac{\F_{2}[x]}{x^{8}+1}$, und
-  mit diesen weiterrechnen.
+  mit diesen weiter rechnen.
 
   Auf das Inverse $\tilde{b}^{(z.s)}$ wendet man folgende
   Abbildung an:
@@ -3798,13 +3798,13 @@ abzuhalten, ist aufwendig.
 Bei der \highl[Verschlüsselung!asymmetrische]{asymmetrischen
   Verschlüsselung} besitzt Bob, der Empfänger, ein Paar von
 Schlüsseln. Der \highl[Schlüssel!öffentlicher]{öffentliche Schlüssel}
-ist für alle Leute zugängig und wird zum Verschlüsseln von
+ist für alle Leute zugänglich und wird zum Verschlüsseln von
 Nachrichten, deren Empfänger Bob ist, verwendet. Der
 \highl[Schlüssel!privater]{private Schlüssel} wird von Bob
 \emph{geheim} gehalten, denn damit kann er Nachrichten, die mit
 seinem öffentlichen Schlüssel verschlüsselt wurden, entschlüsseln.
 
-Der entscheidente Unterschied zu den symmetrischen Verschlüsselungsverfahren
+Der entscheidende Unterschied zu den symmetrischen Verschlüsselungsverfahren
 ist der, dass die Kenntnis des öffentlichen Schlüssels keine Rückschlüsse auf
 den privaten Schlüssel erlaubt. Eine Nachricht, die also mit einem
 öffentlichen Schlüssel chiffriert wurde, kann nur mit dem dazu passenden
@@ -3817,11 +3817,11 @@ Nachrichten verschlüsseln. Dabei stehen sie vor dem Problem, dass sie ein Paar
 geheim zuhaltender Schlüssel über diesen Kanal austauschen müssen.
 (\textit{engl. secret key agreement problem})
 
-Im Jahr 1976 stellten \textsc{Diffie} und \textsc{Hellmann} in ihrer
+Im Jahr 1976 stellten \textsc{Diffie} und \textsc{Hellman} in ihrer
 Arbeit "`New directions in cryptography"'\cite{diffihellman} ein
 Verfahren für dieses augenscheinlich unlösbare Problem vor.
 
-\subsection{Das Protokoll von Diffie und Hellmann}
+\subsection{Das Protokoll von Diffie und Hellman}
 
 \begin{table}
   \centering
@@ -3840,7 +3840,7 @@ Verfahren für dieses augenscheinlich unlösbare Problem vor.
     \hline
   \end{tabularx}
   \caption{Austausch eines geheimen Schlüssels in der Öffentlichkeit nach
-    Diffie und Hellmann}
+    Diffie und Hellman}
   \label{tab:difhel-schl-tau}
 \end{table}
 
@@ -3884,7 +3884,7 @@ Polynomialzeit) nicht möglich ist.
     \hline
   \end{tabularx}
   \caption{Austausch eines geheimen Schlüssels in der Öffentlichkeit nach
-    Rivest und Shermann}
+    Rivest und Sherman}
   \label{tab:rivsher-schl-tau}
 \end{table}
 
@@ -4067,7 +4067,7 @@ Exkurs in die Zahlentheorie.
 
 \subsubsection{Exkurs in die Zahlentheorie}
 
-Ansatzpunk:
+Ansatzpunkt:
 \begin{gather*}
   \Z_{n}^{*} \coloneq \Set{ i | 1\leq i < n, \ggT(i,n)=1}
 \end{gather*}
@@ -4098,7 +4098,7 @@ ist eine multiplikative Gruppe der Ordnung $\phi(n)$.
   $a$ die folgenden Eigenschaften erfüllt
   \begin{itemize}
    \item $a$ und $n$ sind Teilerfremd ($\ggT(a,n)=1$) und
-   \item der kleineste Exponent~$d$, der $a^{d}\equiv1\pmod{n}$ erfüllt, ist
+   \item der kleinste Exponent~$d$, der $a^{d}\equiv1\pmod{n}$ erfüllt, ist
     $\phi(n)$ --~$d$ heißt \highl{Ordnung} von $a$~-- oder anders formuliert:
     für alle $d<\phi(n)$ gilt $a^{d}\not\equiv 1\pmod{n}$
   \end{itemize}
@@ -4141,7 +4141,7 @@ ist eine multiplikative Gruppe der Ordnung $\phi(n)$.
 \end{bsp}
 
 \begin{satz}
-  \textsc{Carl Friedrich Gauss} hat gezeigt, dass
+  \textsc{Carl Friedrich Gauß} hat gezeigt, dass
   \begin{itemize}
    \item $n$ besitzt primitive Wurzeln \gdw $n$ ist $1, 2$ oder $4$ oder $n$
     ist einfache oder doppelte Potenz einer Primzahl~$p>2$ ($n = p^{k}$
@@ -4367,7 +4367,7 @@ Adleman} entwickelt.
     \hline
     1.& & & Wählt große Primzahlen $p,q$, bestimmt $n=p\cdot q$\\
     2.& & & Wählt große Zahl $d$ mit $\ggT(d,\phi(n)) = 1$\\
-    3.& & & Berechnt das Inverse~$e$ in $\Z_{\phi(n)}$\\
+    3.& & & Berechnet das Inverse~$e$ in $\Z_{\phi(n)}$\\
     4.& & $\xleftarrow{n,e}$& \\
     5.& Chiffriert die Botschaft~$m\leq n-1$ durch $c\equiv m^{e}\pmod{n}$& & \\
     6.& & $\xrightarrow{c}$& \\
@@ -4432,7 +4432,7 @@ Das RSA-Verfahren ist also so konstruiert, dass
     möglichst klein sein. siehe \autoref{sec:rsa-angriffe}
 
    \item Ein direkter Angriff würde bedeuten, da $c=m^{e}\pmod{n}$ ist, aus
-    $c$ die $e$-te~Wurzel modulo~$n$ zu berechen. Dies ist nach \autoref{bem:2}
+    $c$ die $e$-te~Wurzel modulo~$n$ zu berechnen. Dies ist nach \autoref{bem:2}
     praktisch nicht machbar.
 
    \item Die Nachricht muss in Blöcke passender Länge zerlegt werden.
@@ -4487,7 +4487,7 @@ Das RSA-Verfahren ist also so konstruiert, dass
     Die Berechnung der $e$-te~Wurzel ist aber ohne die Kenntnis der
     Faktorisierung von $n$ nicht in Polynomialzeit durchführbar. (siehe~\autoref{bem:2})
 
-   \item Die Nachricht~$m$ liese sich auch durch den normalen
+   \item Die Nachricht~$m$ ließe sich auch durch den normalen
     Entschlüsselungsalgorithmus mit $d$ bestimmen. Die Berechnung von $d$ aus
     den öffentlichen Größen ist aber nur mit Kenntnis von $\phi(n)$ möglich,
     was wiederum nur bestimmt werden kann, wenn die Faktorisierung von $n$
@@ -4568,7 +4568,7 @@ funktioniert, die nicht das Produkt zweier Primzahlen sind!
    \item für alle zu $q$ teilerfremden Zahlen~$a$ gilt $a^{q-1}\equiv
     1\pmod{q}$. (diese Eigenschaft ist aus der ersten ableitbar \gdw (wegen
     der ersten Eigenschaft) $a^{c-1}\equiv1\pmod{c}$ \gdw (wegen dem
-    chin.\,Restklassensatz) $a^{c-1}\equiv1\pmod{c}$)
+    chin.\,Restsatz) $a^{c-1}\equiv1\pmod{c}$)
   \end{itemize}
 \end{defini}
 
@@ -4622,7 +4622,7 @@ funktioniert, die nicht das Produkt zweier Primzahlen sind!
     \end{enumerate}
 
     Es gilt also $a^{ed}\equiv a\pmod{p}$ und $a^{ed}\equiv a\pmod{q_{i}}$ für
-    alle $q_{i}$. Nach dem chinesischen Restklassensatz folgt daraus
+    alle $q_{i}$. Nach dem chinesischen Restsatz folgt daraus
     $a^{ed}\equiv a\pmod{n}$.
   \end{proof}
 \end{lemma}
@@ -4949,8 +4949,8 @@ Nachricht $m\equiv z^{b^{-1}}\pmod{p}$. Es gilt also
 Wie leicht ersichtlich ist, kann eine Hashfunktion nicht injektiv sein, da sie
 immer von einer mächtigeren Menge in eine schmächtigere Menge abbildet.
 
-In der informatischen Praxis werden Hashfunktionen häufig durch
-Kopressionsfunktionen erzeugt. Ein \highl{Kompressionsfunktion} ist eine
+In der   Praxis werden Hashfunktionen häufig durch
+Kompressionsfunktionen erzeugt. Ein \highl{Kompressionsfunktion} ist eine
 Abbildung der Form $K\colon\Sigma^{m}\mapsto\Sigma^{n}$ für $m>n$.
 Es werden zwei Forderungen an die Funktion gestellt:
 \begin{itemize}
@@ -4997,7 +4997,7 @@ Um genau das zu vermeiden, formulieren wir folgende Eigenschaften für eine
 \begin{bemerk}
   Ein Invertierungsalgorithmus~$A$ für $H$ liefert für ein gegebenes $m$ ein
   Element~$m'=A(H(m))$. Da die Anzahl der Urbilder von $H(m)$ im Mittel größer
-  als eins ist, ist die Wahrscheinlichkeit eine Kollision $m'$ zu brechnen im
+  als eins ist, ist die Wahrscheinlichkeit eine Kollision $m'$ zu berechnen im
   Mittel größer als $\frac{1}{2}$.
 \end{bemerk}
 
@@ -5005,14 +5005,14 @@ Konsequenz: $H$ ist eine Einwegfunktion, deswegen probabilistische Algorithmen
 zur Erzeugung von Kollisionen.
 
 \begin{satz}
-  Aus einer stark kollisionsrestistenten Kompressionsfunktion~$K$
+  Aus einer stark kollisionsresistenten Kompressionsfunktion~$K$
   der Form $K\colon\Z_{2}^{m} \mapsto \Z_{2}^{n}$ ($m>n$) lässt sich eine
-  stark kollisionsrestistente Hashfunktion~$H\colon\Z_{2}^{m} \mapsto
+  stark kollisionsresistente Hashfunktion~$H\colon\Z_{2}^{m} \mapsto
   \Sigma_{2}^{n}$ konstruieren. (von Merkle)
 \end{satz}
 
 Da nicht bewiesen ist, dass es kryptographische Einwegfunktionen gibt,
-verwendet man nur solche Hashfunktionen, deren Kollisionsrestistenz (bisher)
+verwendet man nur solche Hashfunktionen, deren Kollisionsresistenz (bisher)
 nicht widerlegt ist. Gute Kandidaten dafür sind Verschlüsselungsverfahren, die
 als sicher gelten.
 
@@ -5070,7 +5070,7 @@ werden.
   \begin{proof}
     Ein Elementarereignis $(g_{1},g_{2},\dotsc,g_{k})\in (\Sigma^{n})^{k}$ ist
     die Zuordnung von $k$~Hashwerten auf $k$~Nachrichten, d.\,h. Nachricht~$i$
-    bekommt den Hashwerk~$g_{i}$ zugeordnet. Da die Zuordnung der Hashwerte
+    bekommt den Hashwert~$g_{i}$ zugeordnet. Da die Zuordnung der Hashwerte
     gleichverteilt ist, ergibt sich die Wahrscheinlichkeit für ein
     Elementarereignis als $\bigl(\frac{1}{n}\bigr)^{k} = \frac{1}{n^{k}}$.
 
@@ -5140,7 +5140,7 @@ wenn er
 Aber \autoref{enu:1} ist ihm nicht möglich, weil er aus der Kenntnis von
 $ver_{Alice}$ nicht auf $sig_{Alice}$ schließen kann, da $ver_{Alice}$ eine
 Einwegfunktion ist, und \autoref{enu:2} ist für ihn nicht möglich, da $H$
-kollisionsrestistent ist.
+kollisionsresistent ist.
 
 \chapter{Zero-knowledge-Protokolle}
 
@@ -5200,7 +5200,7 @@ dar, $G_{0}$ und $G_{1}$ sind öffentlich.
 
 Wenn Arthur von Merlin eine Identifikation verlangt, wählt sich Merlin einer
 weiter Permutation~$\rho$ und ein Bit~$a\in\Z_{2}$ und berechnet den
-Graphen~$H=\rho(G_{a})$. Diesen sendet er an Arthur, der seinerseit ein
+Graphen~$H=\rho(G_{a})$. Diesen sendet er an Arthur, der seinerseits ein
 Bit~$b$ wählt und von Merlin einen Isomorphismus~$\sigma$ verlangt, so dass
 $H=\sigma(G_{b})$ ist. Es können nun drei Fälle auftreten:
 \begin{itemize}
@@ -5239,7 +5239,7 @@ prüfen kann. \autoref{tab:zero-know}
   "`Moderne Verfahren der Kryptographie"', 6.\,Auflage, Vieweg, 2006
  \bibitem{delfs} H.\,Delfs, H.\,Knebl: "`Introduction to cryptography"',
   Springer, 2002
- \bibitem{goldreich} O.\,Goldreich: "`Foundamentals of cryptography"',
+ \bibitem{goldreich} O.\,Goldreich: "`Fundamentals of cryptography"',
   Cambridge, 2001
  \bibitem{diffihellman} W.\,Diffie, M.\,Hellman: "`New directions in
   cryptography"', IEEE Transaction on information theory 22, Seiten
@@ -5335,7 +5335,7 @@ Bestimmen Sie den Klartext.
     \end{pmatrix}
   \end{gather*}
 
- \item Bestimmen Sie die enschrechende Matrix zur Entschlüsselung und wenden
+ \item Bestimmen Sie die entsprechende Matrix zur Entschlüsselung und wenden
   Sie diese auf den in a) erhaltenen Geheimtext an.
 \end{enumerate}
 
@@ -5431,7 +5431,7 @@ Leichtesten mit einem Programm. Im 1., 2., 4. und 5. Textteil ist die
 Zuordnung des Buchstabens~\texttt{e} eindeutig. Hier treten die Buchstaben
 \texttt{F}, \texttt{E}, \texttt{I} resp. \texttt{V} am Häufigsten auf. In der
 dritten Spalte gibt es zwei Möglichkeiten: \texttt{H} oder \texttt{Y}, beide
-treten achtmal auf. Jedoch liefert nur die Zuordnung von \texttt{H} auf
+treten acht Mal auf. Jedoch liefert nur die Zuordnung von \texttt{H} auf
 \texttt{e} einen sinnvollen Text. Das Schlüsselwort ist also \texttt{BAUER}.
 \begin{center}
   \begin{tabular}{cccc}
@@ -5534,7 +5534,7 @@ bekannten Sprache zu untersuchen ohne seine Syntax und Semantik zu betrachten.
   \end{minipage}%
   \begin{minipage}{.55\linewidth}
     Mit etwas Glück fällt auf, dass 7 eine Einheit von $\Z_{26}$ ist und man so
-    leicht in der oberen linken Ecke eine 1 erzeigen kann. Das Inverse zu 7 ist
+    leicht in der oberen linken Ecke eine 1 erzeugen kann. Das Inverse zu 7 ist
     15, daher wird die erste Zeile mit 15 durchmultipliziert.
 
     Dann ist es leicht in der unteren Zeile aus dem linken Element eine 0 zu
@@ -5543,7 +5543,7 @@ bekannten Sprache zu untersuchen ohne seine Syntax und Semantik zu betrachten.
     17 ist wieder eine Einheit, so dass eine 1 durch Multiplikation mit 23
     erzeugt werden kann: $23\cdot17\pmod{26} = 1$.
 
-    Aus der 19 lässt sich jetzt wiederrum sehr leicht eine 0 erzeugen:
+    Aus der 19 lässt sich jetzt wiederum sehr leicht eine 0 erzeugen:
     $0=1\cdot7+19\pmod{26}$.
   \end{minipage}
 \end{enumerate}
