Name der Pollard-p-1-Methode korrigiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@2746 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.ltx
+++ b/vogel-krypt/skript.ltx
@@ -4438,8 +4438,8 @@ Das RSA-Verfahren ist also so konstruiert, dass
 \label{sec:rsa-angriffe}
 
 Ein Angriff auf das \highl[Faktorisierung]{Faktorisierungsproblem} ist
-die \highl{$(p-1)$-Methode}\todo{Hat die Methode keinen schöneren Namen?} von
-\textsc{Polard}. Die Idee ist, dass man den Primfaktor $p$ von $n=p\cdot q$ durch
+die \highl{Pollard-$(p-1)$-Methode}\footnote{Nach dem britischen
+  Mathematiker \textsc{John M.\,Pollard}}. Die Idee ist, dass man den Primfaktor $p$ von $n=p\cdot q$ durch
 $p=\ggT(n,k\cdot p)$ ermitteln kann, sofern $n$ kein Teiler von $k\cdot p$ ist.
 
 Sei $\nu$ ein Vielfaches von $p-1$ und $a$ eine beliebige Zahl, die
