--- a/vogel-krypt/skript.ltx
+++ b/vogel-krypt/skript.ltx
@@ -4361,11 +4361,15 @@ Das RSA-Verfahren ist also so konstruiert, dass
     zu testen; z.\,B. von Solovay und Strassen --~ca.\,170 Zahlen testen~--
     oder von Rabin und Miller --~ca.\,100 Zahlen testen.
 
-   \item Die Zahl $d$ sollte möglichst groß sein, damit sie nicht durch probieren
-    gefunden werden kann.
+   \item Die Zahl~$d$ für den privaten Schlüssel sollte möglichst groß
+     sein, d.\,h. etwa in der Nähe von $n$ liegen. Wenn sie nur ein
+     Viertel der Bitgröße von $n$ oder kleiner ist, gibt es einen
+     effizienten Algorithmus zur Berechnung von $d$. (siehe~\cite{wienerrsa})
 
-   \item $e$ ist mit dem erweiterten euklidischen Algorithmus in
-    Polynomialzeit berechenbar.
+   \item Die Zahl $e$ kann klein gewählt werden. Dadurch wird der
+     Algorithmus effizienter. Eine ungünstige Wahl von $e$ ermöglicht
+     Angriffe. Dies kann durch Anhängen eines zufälligen Strings an
+     den Klartext (\highl{Salting}) umgangen werden.
 
    \item $c$ und $m$ sind nach \autoref{satz:1} ebenfalls in Polynomialzeit berechenbar.
 
@@ -5234,6 +5238,9 @@ prüfen kann. \autoref{tab:zero-know}
 \bibitem{fips197} "`Advanced Encryption Standard, FIPS PUB 197"',
   National Institute of Standards and Technology, 2001,\\
   \url{http://www.csrc.nist.gov/publications/fips/fips197/fips-197.pdf}
+\bibitem{wienerrsa} Michael J.\,Wiener: "`Cryptanalysis of short RSA
+  secret exponents"', IEEE Transactions on Information Theory, 36
+  (1990), 553--558
 \end{thebibliography}
 
 \chapter{Übungsaufgaben}
